<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LossBoys</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Customer App</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="login_title">Log In</string>
    <string name="username_input">Username</string>
    <string name="password_input">Password</string>
    <string name="firstname_input">First Name</string>
    <string name="lastname_input">Last Name</string>
    <string name="email_input">Email Address</string>
    <string name="phone_input">Phone Number</string>


</resources>
