<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        >

    <EditText android:id="@+id/password"
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/password_input"
              android:layout_column="2"
              android:layout_marginTop="150dp"/>

    <EditText android:id="@+id/username"
              android:layout_weight="1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/username_input"
              android:layout_marginTop="100dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_alignParentTop="false"
            android:layout_marginTop="200dp"/>

</RelativeLayout>
